@startuml C4_Code_HOS_Engine
!include https://raw.githubusercontent.com/plantuml-stdlib/C4-PlantUML/master/C4_Component.puml

title Code-level diagram for HOS Rule Engine

package "app.services.hos_rule_engine" {
    class HOSRuleEngine {
        +validate_compliance(hours_driven, on_duty_time, hours_since_break, last_rest_period): HOSComplianceResult
        -_check_drive_limit(hours_driven): ComplianceCheck
        -_check_duty_window(on_duty_time): ComplianceCheck
        -_check_break_requirement(hours_since_break, hours_driven): ComplianceCheck
        -_check_rest_requirement(last_rest_period): ComplianceCheck
        -_check_sleeper_berth_eligibility(last_rest_period): tuple
        -_calculate_remaining_hours(hours_driven, on_duty_time): tuple
    }

    class HOSComplianceInput {
        +driver_id: str
        +hours_driven: float
        +on_duty_time: float
        +hours_since_break: float
        +last_rest_period: Optional[float]
    }

    class HOSComplianceResult {
        +status: str
        +is_compliant: bool
        +checks: List[ComplianceCheck]
        +hours_remaining_to_drive: float
        +hours_remaining_on_duty: float
        +break_required: bool
        +rest_required: bool
        +recommendations: List[str]
    }

    class ComplianceCheck {
        +rule: str
        +status: str
        +passed: bool
        +current_value: float
        +limit: float
        +message: str
    }
}

package "app.core.constants" {
    class HOSConstants <<static>> {
        +MAX_DRIVE_HOURS: float = 11.0
        +MAX_DUTY_HOURS: float = 14.0
        +REQUIRED_BREAK_MINUTES: int = 30
        +BREAK_TRIGGER_HOURS: float = 8.0
        +MIN_REST_HOURS: float = 10.0
        +SLEEPER_BERTH_SPLIT_LONG: float = 8.0
        +SLEEPER_BERTH_SPLIT_SHORT: float = 2.0
    }
}

package "app.api.v1.endpoints.hos_rules" {
    class HOSRulesEndpoint {
        +check_compliance(input: HOSComplianceInput): HOSComplianceResult
    }
}

package "app.repositories.driver_repository" {
    class DriverRepository {
        +get_by_driver_id(driver_id: str): Driver
        +update_hos_status(driver_id: str, status: dict): Driver
    }
}

package "app.models.driver" {
    class Driver {
        +id: int
        +driver_id: str
        +hours_driven_today: float
        +on_duty_time_today: float
        +duty_status: str
        +last_break_time: datetime
        +last_rest_period: float
    }
}

HOSRulesEndpoint --> HOSRuleEngine : uses
HOSRuleEngine --> HOSConstants : references
HOSRuleEngine ..> HOSComplianceInput : receives
HOSRuleEngine ..> HOSComplianceResult : returns
HOSComplianceResult *-- ComplianceCheck : contains
HOSRuleEngine --> DriverRepository : fetches data
DriverRepository --> Driver : returns

note right of HOSRuleEngine
  **Core Validation Logic:**
  1. Check 11-hour drive limit
  2. Check 14-hour duty window
  3. Check 30-min break after 8hrs
  4. Check 10-hour rest requirement
  5. Check sleeper berth split eligibility (7/3, 8/2)
  6. Calculate remaining hours
  7. Generate recommendations
end note

note right of HOSConstants
  **FMCSA Regulations:**
  - 11 hours: Max driving time
  - 14 hours: Max on-duty window
  - 30 minutes: Required break
  - 8 hours: Break trigger threshold
  - 10 hours: Minimum rest period
  - 8/2 hours: Sleeper berth splits
end note

@enduml
